--- a/src/Handson4/styles.css
+++ b/src/Handson4/styles.css
@@ -5,6 +5,26 @@ nav {
 	justify-content: space-around;
 	align-items: center;
 }
+
+header {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0px 100px;
+	height: 120px;
+	justify-content: space-between;
+	align-items: center;
+}
+
+button {
+	padding: 10px;
+	border-radius: 25px;
+	width: 200px;
+	border: 1px solid transparent;
+	background-color: black;
+	color: cyan;
+	cursor: pointer;
+}
+
 .link {
 	color: white;
 	text-decoration: none;
@@ -13,10 +33,10 @@ nav {
 }
 
 h1 {
-	padding: 40px;
 	color: white;
 	text-shadow: 4px 4px 3px lightseagreen;
 }
+
 table,
 thead {
 	border-collapse: collapse;
@@ -25,16 +45,26 @@ thead {
 	background-color: white;
 	text-align: left;
 }
+
 tr {
 	border-bottom: 1px solid khaki;
 }
+
 td,
 th {
 	padding: 10px;
 	color: olive;
 	background-color: antiquewhite;
 }
+
 th {
 	background-color: maroon;
 	color: Gold;
+}
+
+@media screen and (min-width: 360px) and (max-width: 600px) {
+	header {
+		justify-content: space-around;
+		padding: 0px;
+	}
 }
